# arctic-query-quest

./: .gitignore  Makefile  README.md  arctic.py  common.py  intro.md  main.py  prompt.jinja  prompt.py  pyproject.toml  style.css  tts.py
.github/workflows/: test.yml
.streamlit/: config.toml
arctic_query_quest/: app.py  arctic.py  common.py  main.py  prompt.py
models/: books.sql  game.sql  shop.sql
pages/: about.py
templates/: prompt.jinja
templates/difficulty/: easy.jinja  hard.jinja  medium.jinja
tests/: test_app.py  test_arctic.py
