[tool.poetry]
name = "arctic-query-quest"
version = "0.1.0"
description = ""
authors = ["Volker Janz <volker@janz.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
replicate = "^0.25.2"
streamlit = "^1.34.0"
langchain = "^0.1.19"
duckdb = "^0.10.2"
transformers = "^4.40.2"
duckdb-engine = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
